2005-12-15 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Utils.h,
	  src/Utils.cc: added get_color_as_pixbuf() to create colored squares
	  of custom sizes. These can be use troughout the app to represent
	  filesystems. e.g. in the treeview and convertmenu.
	* include/TreeView_Detail.h,
	  src/TreeView_Detail.cc,
	  include/VBox_VisualDisk.h,
	  src/VBox_VisualDisk.cc,
	  include/Win_GParted.h,
	  src/Win_GParted.cc: use Utils::get_color_as_pixbuf() instead of
	  custom drawn widgets.

2005-12-14 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* include/FileSystem.h,
	  src/jfs.cc,
	  src/xfs.cc: use mkdir instead of wrapping CLI tool

2005-12-14 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Utils.h,
	  src/Utils.cc: added mount() and unmount()
	* src/Win_GParted.cc,
	  src/jfs.cc,
	  src/xfs.cc: use Utils::mount and Utils::umount instead of wrapping
	  CLI tools.

2005-12-14 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Partition.cc: since we now have the device_path in Partition we
	  don't need to 'calculate' it anymore.

2005-12-14 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: did some cleanups
	* include/Operation.h,
	  src/Operation.cc: added get_index_extended to get the ext_index in a
	  uniform way instead of calculating it every time ourselves.
	
2005-12-13 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: check if file is open before using it.
	* src/Utils.cc: removed commented include

2005-12-13 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* replaced the inline Utils functions with static functions.
	  This shaves a few kbytes (24 in fact) off the binary and is a bit
	  cleaner code-wise (imho).

2005-12-12 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: don't use wait_for_node() if resizing an
	  extended partition (they don't have nodes :P)

2005-12-11 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* po/POTFILES.in: added include/Utils.h
	* include/GParted_Core.h,