@@ -1,5 +1,10 @@
 2005-12-15 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/GParted_Core.cc: don't wait for node to appear when an extended
+	  partition is created.
+	
+2005-12-15 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/Utils.h,
 	  src/Utils.cc: added get_color_as_pixbuf() to create colored squares
 	  of custom sizes. These can be use troughout the app to represent
